[package]
name = "axum-sqlx-tx"
description = "Request-scoped SQLx transactions for axum"
version = "0.9.0"
license = "MIT"
repository = "https://github.com/digital-society-coop/axum-sqlx-tx/"
edition = "2021"
include = [
  "LICENSE",
  "README.md",
  "Cargo.toml",
  "**/*.rs"
]

[dependencies]
axum-core = "0.5"
bytes = "1"
futures-core = "0.3"
http = "1"
http-body = "1"
parking_lot = { version = "0.12", features = ["arc_lock", "send_guard"] }
sqlx = { version = "0.8", default-features = false }
thiserror = "1"
tower-layer = "0.3"
tower-service = "0.3"

[dev-dependencies]
axum = "0.8.1"
hyper = "1.0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
